RESOLVED FIXED102426
Ignore autocomplete=off for chrome generated passwords.
https://bugs.webkit.org/show_bug.cgi?id=102426
Summary Ignore autocomplete=off for chrome generated passwords.
Yue Zhang
Reported 2012-11-15 13:54:51 PST
Ignore autocomplete=off for chrome generated passwords.
Attachments
Patch (2.82 KB, patch)
2012-11-15 14:02 PST, Yue Zhang
no flags
Patch (2.98 KB, patch)
2012-11-15 14:35 PST, Yue Zhang
no flags
Patch (3.00 KB, patch)
2012-11-15 14:42 PST, Yue Zhang
no flags
Patch (3.00 KB, patch)
2012-11-15 14:50 PST, Yue Zhang
no flags
Yue Zhang
Comment 1 2012-11-15 14:02:13 PST
WebKit Review Bot
Comment 2 2012-11-15 14:07:33 PST
Please wait for approval from abarth@webkit.org, dglazkov@chromium.org, fishd@chromium.org, jamesr@chromium.org or tkent@chromium.org before submitting, as this patch contains changes to the Chromium public API. See also https://trac.webkit.org/wiki/ChromiumWebKitAPI.
Adam Barth
Comment 3 2012-11-15 14:16:28 PST
Comment on attachment 174510 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=174510&action=review > Source/WebKit/chromium/public/WebPasswordFormData.h:101 > + // Value of shouldAutocomplete for the password element. > + bool passwordShouldAutocomplete; Can you add an inline constructor that initializes this value to something?
Yue Zhang
Comment 4 2012-11-15 14:35:48 PST
Adam Barth
Comment 5 2012-11-15 14:39:30 PST
Comment on attachment 174518 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=174518&action=review > Source/WebKit/chromium/public/WebPasswordFormData.h:110 > + WebPasswordFormData(): passwordShouldAutocomplete(false) { } This isn't in quite the right style. The appropriate style is as follows: WebPasswordFormData() : passwordShouldAutocomplete(false) { }
Yue Zhang
Comment 6 2012-11-15 14:42:39 PST
WebKit Review Bot
Comment 7 2012-11-15 14:45:37 PST
Attachment 174521 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/chromium/ChangeLog', u'Sourc..." exit_code: 1 Source/WebKit/chromium/public/WebPasswordFormData.h:111: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Barth
Comment 8 2012-11-15 14:47:09 PST
Comment on attachment 174521 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=174521&action=review >> Source/WebKit/chromium/public/WebPasswordFormData.h:111 >> + : passwordShouldAutocomplete(false) > > Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Yeah, you need two more spaces.
Yue Zhang
Comment 9 2012-11-15 14:50:08 PST
Adam Barth
Comment 10 2012-11-15 14:53:48 PST
Comment on attachment 174522 [details] Patch Yay! Thanks! :)
WebKit Review Bot
Comment 11 2012-11-15 16:23:47 PST
Comment on attachment 174522 [details] Patch Clearing flags on attachment: 174522 Committed r134852: <http://trac.webkit.org/changeset/134852>
WebKit Review Bot
Comment 12 2012-11-15 16:23:51 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.