Ignore autocomplete=off for chrome generated passwords. https://bugs.webkit.org/show_bug.cgi?id=102426

Patch by Yue Zhang <zysxqn@google.com> on 2012-11-15
Reviewed by Adam Barth.

Record the autocomplete attribute in the web password form data,
so that we can handle autocomplete in chromium code. The
motivation/background is: we should ignore autocomplete=off field
for password forms with chrome generated passwords (has passed
security review). By handling autocomplete in chromium code we can
distinguish password forms with chrome generated passwords and
those normal password forms. Note that we haven't turned off
checking autocomplete=off in the Webkit code for now so there is
no behavior change after this CL, and we will turn off after we
make the chromium side change to be safe.

* public/WebPasswordFormData.h:
(WebPasswordFormData):
* src/WebPasswordFormData.cpp:

Canonical link: https://commits.webkit.org/120552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134852 268f45cc-cd09-0410-ab3c-d52691b4dbfc